# libmgyield

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
ci/appveyor/: setenv.bat
include/: mgyield.h  mgyield_p.h
src/: mgyield.cpp
unit_tests/: CMakeLists.txt  mgyield_unit_tests_class.cpp  mgyield_unit_tests_empty.cpp  mgyield_unit_tests_generator_class.cpp  mgyield_unit_tests_int.cpp  mgyield_unit_tests_main.cpp  mgyield_unit_tests_string.cpp
